--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body id="Home">
     <!-- Start Navbar -->
@@ -30,10 +30,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Order">Order</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#Contact">Contact</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -98,7 +94,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="hitam.jpg" class="card-img-top" alt="Product 1" />
+              <img src="HITAM.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Hitam</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -108,7 +104,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="coklat.jpg" class="card-img-top" alt="Product 2" />
+              <img src="COKLAT.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Coklat</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -118,7 +114,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="abu.jpg" class="card-img-top" alt="Product 3" />
+              <img src="ABU.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Abu-abu</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -142,7 +138,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="pashhitam.jpg" class="card-img-top" alt="Product 1" />
+              <img src="PASHHITAM.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Hitam</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -152,7 +148,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="pashcream.jpg" class="card-img-top" alt="Product 2" />
+              <img src="PASHCREAM.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Cream</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -162,7 +158,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="pashnavy.jpg" class="card-img-top" alt="Product 3" />
+              <img src="PASHNAVY.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Navy</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -186,7 +182,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="bercoksu.jpg" class="card-img-top" alt="Product 1" />
+              <img src="BERCOKSU.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Coksu</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
@@ -196,7 +192,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="berungu.jpg" class="card-img-top" alt="Product 2" />
+              <img src="BERUNGU.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Burgundy</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
@@ -206,7 +202,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="bercream.jpg" class="card-img-top" alt="Product 3" />
+              <img src="BERCREAM.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Cream</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
@@ -231,7 +227,7 @@
           <div class="col-md-6">
             <form name="Contact-Form">
               <div class="mb-3">
-                <label for="name" class="form-label">Full Name</label>
+                <label for="name" class="form-label">Nama</label>
                 <input type="text" class="form-control" id="name" name="nama" placeholder="Enter your name" required />
               </div>
               <div class="mb-3">
