--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbyJRaVPteqrSUUwoxNhOlHpe8vDlRCVFbGI-FamUIv0gewHVK62Q7tm84OOfk5kUtbB/exec";
-      const form = document.forms["Contact-Form"];
+      const form = document.forms["Puti Scarf-Form"];
 
       form.addEventListener("submit", (e) => {
         e.preventDefault();
