--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="hitam.jpg" class="card-img-top" alt="Product 1" />
+              <img src="HITAM.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Hitam</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -108,7 +108,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="coklat.jpg" class="card-img-top" alt="Product 2" />
+              <img src="COKLAT.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Coklat</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -118,7 +118,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="abu.jpg" class="card-img-top" alt="Product 3" />
+              <img src="ABU.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Abu-abu</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -142,7 +142,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="pashhitam.jpg" class="card-img-top" alt="Product 1" />
+              <img src="PASHHITAM.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Hitam</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -152,7 +152,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="pashcream.jpg" class="card-img-top" alt="Product 2" />
+              <img src="PASHCREAM.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Cream</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -162,7 +162,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="pashnavy.jpg" class="card-img-top" alt="Product 3" />
+              <img src="PASHNAVY.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Navy</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -186,7 +186,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="bercoksu.jpg" class="card-img-top" alt="Product 1" />
+              <img src="BERCOKSU.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Coksu</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
@@ -196,7 +196,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="berungu.jpg" class="card-img-top" alt="Product 2" />
+              <img src="BERUNGU.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Burgundy</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
@@ -206,7 +206,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="bercream.jpg" class="card-img-top" alt="Product 3" />
+              <img src="BERCREAM.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Cream</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
