--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 
     <!-- Start Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="logo2.png" alt="Toko Online" width="90" class="rounded-circle img-thumbnail" />
+      <img src="LOGO2.png" alt="Toko Online" width="200" class="rounded-circle img-thumbnail" />
       <h2 class="display-4">Puti Scarf</h2>
       <p class="lead">Tempat terbaik untuk pilihan Hijabmu</p>
+      <img src="PASHCREAM.jpg" alt="Tampilan Utama" class="img-fluid mt-4" style="max-width: 100%; height: auto;" />
     </section>
     <!-- End Jumbotron -->
 
@@ -98,7 +99,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="hitam.jpg" class="card-img-top" alt="Product 1" />
+              <img src="HITAM.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Hitam</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -108,7 +109,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="coklat.jpg" class="card-img-top" alt="Product 2" />
+              <img src="COKLAT.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Coklat</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -118,7 +119,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="abu.jpg" class="card-img-top" alt="Product 3" />
+              <img src="ABU.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">PJ ~ Abu-abu</h5>
                 <p class="card-text">Terbuat dari bahan voal berkualitas, ringan, dan nyaman dipakai sehari-hari.</p>
@@ -142,7 +143,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="pashhitam.jpg" class="card-img-top" alt="Product 1" />
+              <img src="PASHHITAM.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Hitam</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -152,7 +153,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="pashcream.jpg" class="card-img-top" alt="Product 2" />
+              <img src="PASHCREAM.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Cream</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -162,7 +163,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="pashnavy.jpg" class="card-img-top" alt="Product 3" />
+              <img src="PASHNAVY.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">PR ~ Navy</h5>
                 <p class="card-text">Terbuat dari bahan rayon premium, lembut, dan mudah diatur.</p>
@@ -186,7 +187,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card">
-              <img src="bercoksu.jpg" class="card-img-top" alt="Product 1" />
+              <img src="BERCOKSU.jpg" class="card-img-top" alt="Product 1" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Coksu</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
@@ -196,7 +197,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="berungu.jpg" class="card-img-top" alt="Product 2" />
+              <img src="BERUNGU.jpg" class="card-img-top" alt="Product 2" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Burgundy</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
@@ -206,7 +207,7 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <img src="bercream.jpg" class="card-img-top" alt="Product 3" />
+              <img src="BERCREAM.jpg" class="card-img-top" alt="Product 3" />
               <div class="card-body">
                 <h5 class="card-title">B ~ Cream</h5>
                 <p class="card-text">Terbuat dari bahan lycra yang lentur, adem, praktis, dan elegan.</p>
@@ -231,7 +232,7 @@
           <div class="col-md-6">
             <form name="Contact-Form">
               <div class="mb-3">
-                <label for="name" class="form-label">Full Name</label>
+                <label for="name" class="form-label">Nama</label>
                 <input type="text" class="form-control" id="name" name="nama" placeholder="Enter your name" required />
               </div>
               <div class="mb-3">
@@ -297,17 +298,28 @@
       <p>Created with <i class="bi bi-heart-fill"></i> by Puti Scarf</p>
     </footer>
     <!-- End Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-      const scriptURL = "https://script.google.com/macros/s/AKfycbyJRaVPteqrSUUwoxNhOlHpe8vDlRCVFbGI-FamUIv0gewHVK62Q7tm84OOfk5kUtbB/exec";
-      const form = document.forms["Contact-Form"];
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<form name="submit-to-google-sheet">
+  <input name="email" type="email" placeholder="Email" required>
+  <button type="submit">Send</button>
+  <button class="btn btn-primary" type="button" disabled>
+    <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+    <span role="status">Loading...</span>
+  </button>
+</form>
+<script>
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbwqwT6fCC04-V936HIH5hMjI4vA0zCyzsskG2xY1uip90Qg_tow4VMczGMYFJw-2vtyow/exec'
+  const form = document.forms['Puti Scarf-Form']
 
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        fetch(scriptURL, { method: "POST", body: new FormData(form) })
-          .then((response) => alert("Success!"))
-          .catch((error) => alert("Error!"));
-      });
-    </script>
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => console.log('Success!', response))
+      .catch(error => console.error('Error!', error.message))
+  })
+</script>
   </body>
 </html>
